<resources>
    <string name="app_name">TODOS APP</string>

    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="password_confirmation">PASSWORD CONFIRMATION</string>
    <string name="username_title">USERNAME :</string>
    <string name="email_title">EMAIL :</string>
    <string name="joined_at_title">JOINED :</string>
    <string name="todo_list_owner">%1$s\'s Todo List</string>
    <string name="todo_title">TODO TITLE</string>
    <string name="importance">IS THIS IMPORTANT?</string>
    <string name="item_list_owner">%1$s\'s Item List</string>
    <string name="item_title">ITEM TITLE</string>

    <string name="invalid_sign_in">INVALID SIGN-IN!</string>
    <string name="invalid_sign_in_detail_1">- This account does not exist</string>
    <string name="invalid_sign_in_detail_2">- Incorrect email or password</string>
    <string name="invalid_sign_up">INVALID SIGN-UP!</string>
    <string name="invalid_sign_up_detail">- This email may have already been taken</string>
    <string name="invalid_characters">INVALID CHARACTERS</string>
    <string name="invalid_characters_details">- Contains invalid characters\nSuch as: . , # , $ , [ , ]</string>
    <string name="uncompleted_form">FORM NOT COMPLETED!</string>
    <string name="missing_username">- Username is missing</string>
    <string name="missing_email">- Email is missing</string>
    <string name="missing_password">- Password is missing</string>
    <string name="missing_password_confirmation">- Password confirmation is missing</string>
    <string name="wrong_confirmation">WRONG PASSWORD CONFIRMATION!</string>
    <string name="wrong_confirmation_detail">- Password confirmation mismatch</string>

    <string name="help_title_main">MAIN MENU</string>
    <string name="help_detail_main">You can choose to view your todo list, your profile, or sign out here</string>
    <string name="help_title_profile">PROFILE</string>
    <string name="help_detail_profile">This is your profile details, including your username, email, and joined date</string>
    <string name="help_title_todo_list">TODO LIST</string>
    <string name="help_detail_todo_list">You can add new todo, or view each todo\'s item list here</string>
    <string name="help_detail_todo_status_green">ALL DONE</string>
    <string name="help_detail_todo_status_red">NO ITEM</string>
    <string name="help_detail_todo_status_gray">NOT DONE</string>
    <string name="help_title_new_todo">NEW TODO</string>
    <string name="help_detail_new_todo">You can add new todo here</string>
    <string name="help_title_edit_todo">EDIT TODO</string>
    <string name="help_detail_edit_todo">You can edit current todo here</string>
    <string name="help_title_item_list">ITEM LIST</string>
    <string name="help_detail_item_list">You can add new item, or manage items in the list here</string>
    <string name="help_detail_item_status_green">DONE</string>
    <string name="help_detail_item_status_red">NOT DONE</string>
    <string name="help_title_new_item">NEW ITEM</string>
    <string name="help_detail_new_item">You can add new item here</string>
    <string name="help_title_edit_item">EDIT ITEM</string>
    <string name="help_detail_edit_item">You can edit current item here</string>

    <string name="options_title">%1$s OPTIONS</string>
    <string name="option_show_items">SHOW ITEM LIST</string>
    <string name="option_edit_todo">EDIT TODO DETAILS</string>
    <string name="option_delete_todo">DELETE TODO</string>
    <string name="option_mark_item">MARK AS %1$sDONE</string>
    <string name="option_edit_item">EDIT ITEM DETAILS</string>
    <string name="option_delete_item">DELETE ITEM</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_now">SIGN UP NOW!</string>
    <string name="sign_out">SIGN OUT</string>

    <string name="view_todos">VIEW ALL TODOS</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="new_todo">NEW TODO</string>
    <string name="new_item">NEW ITEM</string>
    <string name="edit_todo">EDIT TODO</string>
    <string name="edit_item">EDIT ITEM</string>
    <string name="confirm">CONFIRM</string>
    <string name="edit">EDIT</string>
    <string name="close">CLOSE</string>
    <string name="back_to_main">BACK TO MAIN MENU</string>
    <string name="back_to_todo_list">BACK TO TODO LIST</string>
</resources>
