<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_sign_in_email"
                    android:hint="@string/email"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@null" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_black_gray_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edittext_sign_in_password"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@null" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_black_gray_line" />
            </LinearLayout>

            <Button
                android:id="@+id/button_sign_in"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_green" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_sign_up_now"
        android:text="@string/sign_up_now"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_gray" />
</RelativeLayout>
