<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:text="@string/app_name"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/sign_up"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_sign_up_username"
                    android:hint="@string/username"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@null" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_black_gray_line">
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edittext_sign_up_email"
                    android:hint="@string/email"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@null" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_black_gray_line">
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edittext_sign_up_password"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@null" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_black_gray_line">
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edittext_sign_up_password_confirmation"
                    android:hint="@string/password_confirmation"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@null" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_black_gray_line">
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/button_sign_up"
                    android:text="@string/sign_up"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_green" />

                <Button
                    android:id="@+id/button_cancel"
                    android:text="@string/cancel"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
