<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_black">

    <RelativeLayout
        android:id="@+id/layout_app_bar_edit_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@drawable/bg_green">

        <TextView
            android:id="@+id/textview_username_edit_todo"
            android:text="@string/username"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_white_circle"
            android:src="@mipmap/question_mark"
            android:onClick="onHelpClick" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_edit_todo_sub_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layout_app_bar_edit_todo">

        <TextView
            android:id="@+id/textview_edit_todo_owner"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="5dp"
            android:background="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/edit_todo"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_edit_todo_title"
                    android:hint="@string/todo_title"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@null" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_black_gray_line">
                </FrameLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/checkbox_edit_todo_importance"
                    android:text="@string/importance"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:buttonTint="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layoutDirection="rtl" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_confirm_edit_todo"
                    android:text="@string/edit"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/bg_green" />

                <Button
                    android:id="@+id/button_cancel_edit_todo"
                    android:text="@android:string/cancel"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
